src/css/index.css
body {
  min-width: 796px;
  min-height: 596px;
  overflow: hidden;
}

.window {
  /* min-height: 594px; */
  width: 794px;
  height: 594px;
}

#findBar {
  width: 76vw;
}

#titleBarIcon,
#titleBarIcon:hover,
#titleBarIcon:active,
#titleBarIcon:focus {
  outline: none;
  padding: 0;
  margin-right: 2px;
  background-image: url("../bin/images/titleBarIcon.png") !important;
  width: 12px;
  height: 12px;
  min-width: unset;
  min-height: unset;
  box-sizing: unset;
  box-shadow: unset;
}

#mainSearchSection {
  padding-bottom: 10px;
}

#mainIndexContentContainer {
  height: 82vh;
  /* display: inline-block; */
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#mainIndexSection {
  height: 100%;
  max-width: 20%;
  /* float: left; */
  flex: 1;
  /* padding: 0; */
}

#mainContentSection {
  height: 100%;
  max-width: 76%;
  /* float: right; */
  box-shadow: var(--border-field);
  flex: 1;
  padding: 6px;
  border: 0;
}

